# tick-data

./: .gitignore  Cargo.toml  README.md
src/: ingest.rs  lib.rs
src/persistence/: compressed_storage.rs  hot_storage.rs  mod.rs  trade.rs
src/persistence/models/: asset_context.rs  mid.rs  mod.rs  trade.rs
src/worker/: asset_context.rs  mids.rs  mod.rs  trades.rs
systemd/: tick-data.env  tick-data.service
