[package]
name = "tick-data"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "main"

[dependencies]
alloy-primitives = "1.5.7"
anyhow = "1.0.102"
bytemuck = { version = "1.25.0", features = ["derive"] }
env_logger = "0.11.10"
futures = "0.3.32"
heapless = { version = "0.7.17", features = ["serde"] }
hypersdk = "0.2.9"
log = "0.4.29"
postcard = { version = "1.1.3", features = ["experimental-derive", "use-std"] }
rust_decimal = { version = "1.41.0", features = ["bytemuck", "c-repr"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["fs", "macros", "rt-multi-thread"] }
uuid = { version = "1.23.1", features = ["v7"] }
